--- a/src/app/features/resourceLibrary/table-view/table-view.component.scss
+++ b/src/app/features/resourceLibrary/table-view/table-view.component.scss
@@ -13,6 +13,7 @@
     height: 90%;
     margin-right: 50px;
     margin-left: 50px;
+
 }
 
 .gridcontainer{
@@ -20,7 +21,7 @@
     height: 70vh;
 
     margin: auto;
-    margin-top: 30px;
+    margin-top: 60px;
   
 }
 
